# MEETFLOW-AI_MEETING_NOTES

./: .gitignore  CHANGELOG.md  PRIVACY.md  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: PRODUCTION_READINESS.md  status.md
docs/decisions/: ADR-002-freemium-licensing.md
docs/playbooks/: release.md
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/examples/: gen_license.rs
frontend/src-tauri/src/: error.rs  lib.rs
frontend/src-tauri/src/audio/: capture.rs  mod.rs  pipeline.rs
frontend/src-tauri/src/commands/: audio.rs  license.rs  llm.rs  meetings.rs  mod.rs  settings.rs  whisper.rs
frontend/src-tauri/src/db/: mod.rs  schema.rs  search.rs
frontend/src-tauri/src/licensing/: mod.rs
frontend/src-tauri/src/llm/: client.rs  mod.rs  providers.rs  summary.rs  templates.rs
frontend/src-tauri/src/storage/: mod.rs  secrets.rs
frontend/src-tauri/src/whisper/: download.rs  engine.rs  mod.rs
frontend/src/app/: global-error.tsx
frontend/src/app/(app)/: error.tsx
frontend/src/app/(app)/meetings/: page.tsx
frontend/src/app/(app)/meetings/[id]/: MeetingDetailClient.tsx  page.tsx
frontend/src/app/(app)/settings/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/meeting-detail/: notes-tab.tsx  summary-tab.tsx  transcript-tab.tsx
frontend/src/components/onboarding/: step-ai-provider.tsx  step-model.tsx  step-welcome.tsx
frontend/src/components/settings/: about-tab.tsx  ai-tab.tsx  audio-tab.tsx  general-tab.tsx  plan-tab.tsx  privacy-tab.tsx  summary-options.tsx  transcription-tab.tsx
frontend/src/hooks/: useLicense.ts  useMeetings.ts
frontend/src/lib/: settings-keys.ts  tauri.ts
frontend/src/messages/: en.json  es.json
frontend/src/providers/: providers.tsx
frontend/src/test/: utils.test.ts
